# cinema-desktop

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  tauri.conf.json
.meta/: .releases.json
src/: main.rs  raw_info.rs  remote_media_info.rs
tests/: manifests.rs
