[package]
name = "cinema"
version = "0.0.1"
description = "Synchronize watching videos with friends and communities."
authors = ["Starz0r <starz0r@starz0r.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.5.4", features = [] }

[dependencies]
tauri = { version = "=1.7.2", features = [ "fs-all", "path-all", "shell-open", "process-command-api", "shell-sidecar"] }
serde = { version = "=1.0.159", features = ["derive"] }
winver = "=1.0.0"
serde_json = "=1.0.95"
windows = { version = "=0.48.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse"] }
anyhow = "=1.0.71"
either = "=1.6.0"
serde_derive = "=1.0.159"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
